[package]
name = "kucoin-trial-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
hmac = "0.12"
sha2 = "0.10"
base64 = "0.21"
serde_json = "1.0"
dotenv = "0.15"
uuid = { version = "1.5", features = ["v4"] }
